--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "faststore",
+  "name": "@yibarra/faststore",
   "description": "Digital commerce toolkit for frontend developers.",
   "repository": "git@github.com:vtex/faststore.git",
   "license": "MIT",
@@ -33,7 +33,7 @@
     "turbo": "^2.3.4",
     "typescript": "5.3.2"
   },
-  "version": "0.0.0",
+  "version": "0.0.1",
   "volta": {
     "node": "18.19.0",
     "pnpm": "9.15.5"
